--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,17 @@
-<h2 id="title">Welcome to Ember</h2>
+{{#md-vertical-step-container activeStep=1 as |stepContainer| }}
 
-{{outlet}}
+  {{#md-vertical-step stepContainer=stepContainer label="Step 1" stepNumber=1 as |step1|}}
+      <p>Hello 1</p>
+
+      {{#paper-button type="button" action="completeStep" target=step1 class="md-accent md-raised add-guest-button"}}
+          Continue
+      {{/paper-button}}
+
+  {{/md-vertical-step}}
+
+
+  {{sample-step-2 stepContainer=stepContainer}}
+
+  {{sample-step-3 stepContainer=stepContainer stepNumber=3 label="Step 3"}}
+
+{{/md-vertical-step-container}}
